feat: ordernar cardápio por disponibilidade