@@ -8,10 +8,13 @@ import com.ufcg.psoft.commerce.exception.estabelecimento.EstabelecimentoNaoEncon
 import com.ufcg.psoft.commerce.model.Estabelecimento;
 import com.ufcg.psoft.commerce.model.Sabor;
 import com.ufcg.psoft.commerce.repository.EstabelecimentoRepository;
+import com.ufcg.psoft.commerce.repository.SaborRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,6 +23,9 @@ public class EstabelecimentoServiceImpl implements EstabelecimentoService {
 
     @Autowired
     private EstabelecimentoRepository estabelecimentoRepository;
+
+    @Autowired
+    private SaborRepository saborRepository;
 
     @Autowired
     ModelMapper modelMapper;
@@ -76,11 +82,12 @@ public class EstabelecimentoServiceImpl implements EstabelecimentoService {
     public List<SaborCardapioDTO> getCardapio(Long id) {
         Estabelecimento estabelecimento = this.estabelecimentoRepository.findById(id)
                 .orElseThrow(EstabelecimentoNaoEncontrado::new);
-        List<Sabor> sabores = estabelecimento.getSabores();
 
-        return sabores.stream().map(sabor -> 
-            modelMapper.map(sabor, SaborCardapioDTO.class)
-          ).toList();
+        List<Sabor> sabores = this.saborRepository.findAll(Sort.by(Sort.Direction.DESC, "disponivel"));
+
+        return sabores.stream()
+                .filter(sabor -> sabor.getEstabelecimento().getId().equals(id))
+                .map(sabor -> modelMapper.map(sabor, SaborCardapioDTO.class)).collect(Collectors.toList());
     }
 
     public List<SaborCardapioDTO> getCardapioPorTipo(Long id, String tipo) {
@@ -92,6 +99,6 @@ public class EstabelecimentoServiceImpl implements EstabelecimentoService {
                     .filter(sabor -> sabor.getTipo().equals(tipo))
                     .map(sabor -> modelMapper.map(sabor, SaborCardapioDTO.class))
                     .collect(Collectors.toList());
-    }   
+    }
 
 }
